--- a/src/app/components/admin-template/admin-template.component.css
+++ b/src/app/components/admin-template/admin-template.component.css
@@ -10,3 +10,102 @@
   box-shadow: 2px 2px 5px #b8b9be;
   margin-left: 1rem;
 }
+
+::ng-deep.mat-form-field {
+  width: 96%;
+}
+
+::ng-deep.p-multiselect {
+  width: 100%;
+}
+
+::ng-deep.p-multiselect {
+  padding: 0.55rem 0.55rem 0.55rem 0.55rem;
+  border-radius: 0.55em;
+  border: 0.0625rem solid #d1d9e6;
+  background-color: #e6e7ee;
+  box-shadow: 2px 2px 5px #b8b9be;
+}
+
+::ng-deep.p-multiselect:not(.p-disabled):hover {
+  color: #44476a;
+  border-color: #d1d9e6;
+  outline: 0;
+  animation: pulse 3s infinite;
+}
+
+::ng-deep.p-inputtext:enabled:hover {
+  color: #44476a;
+  border-color: #d1d9e6;
+  outline: 0;
+  animation: pulse 3s infinite;
+}
+
+::ng-deep.p-multiselect-panel .p-multiselect-header {
+  padding: 0.55rem 0.55rem 0.55rem 0.55rem;
+  border: 0.0625rem solid #d1d9e6;
+  background-color: #e6e7ee;
+  margin: 0;
+  border-top-right-radius: 0.55em;
+  border-top-left-radius: 0.55em;
+}
+
+::ng-deep.p-multiselect-panel
+  .p-multiselect-items
+  .p-multiselect-item:not(.p-highlight):not(.p-disabled):hover {
+  color: #44476a;
+  border: 0.0625rem solid #d1d9e6;
+  background-color: #e6e7ee;
+  box-shadow: 2px 2px 5px #b8b9be;
+}
+
+::ng-deep.p-multiselect-panel .p-multiselect-items .p-multiselect-item {
+  color: #44476a;
+  background: none;
+}
+
+::ng-deep.p-multiselect-panel {
+  border: 0.0625rem solid #d1d9e6;
+  background-color: #e6e7ee;
+  box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff !important;
+}
+
+::ng-deep.p-multiselect-panel
+  .p-multiselect-items
+  .p-multiselect-item.p-highlight {
+  color: #44476a;
+  border: 0.0625rem solid #d1d9e6;
+  background-color: #e6e7ee;
+  box-shadow: 2px 2px 5px #b8b9be;
+}
+
+::ng-deep.p-inputtext {
+  padding: 0.6rem 0.75rem;
+  color: #44476a;
+  background-color: #e6e7ee;
+  border: 0.0625rem solid #d1d9e6;
+  transition: all 0.3s ease-in-out;
+  border-radius: 0.99rem;
+  box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
+  overflow-wrap: break-word;
+  -webkit-appearance: none;
+}
+
+::ng-deep.p-inputtext:enabled:focus {
+  outline: 0;
+  box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
+  border: 0.0625rem solid #d1d9e6;
+}
+
+::ng-deep.p-multiselect-filter-icon {
+  top: 58% !important;
+}
+
+::ng-deep.p-multiselect-items-wrapper {
+  max-height: 12rem !important;
+}
+
+::ng-deep.p-multiselect .p-multiselect-panel {
+  top: -177.922px !important;
+  border-radius: 0.55em;
+}
