--- a/src/app/css/neumorphism.component.css
+++ b/src/app/css/neumorphism.component.css
@@ -725,3 +725,39 @@ input:checked + .toggle-slider-neumorphism::before {
   color: #44476a;
   border-radius: 1rem;
 }
+
+::ng-deep.p-fileupload .p-fileupload-buttonbar {
+  padding: 0.55rem;
+  border-radius: 0.55em 0em 0em 0em;
+  border: 0.0625rem solid #d1d9e6;
+  background-color: #e6e7ee;
+}
+
+::ng-deep.p-fileupload-choose:not(.p-disabled):active {
+  background-color: #e6e7ee;
+  color: #44476a;
+  border: 0.0625rem solid #d1d9e6;
+}
+
+::ng-deep.p-fileupload-choose:not(.p-disabled):hover {
+  background-color: #e6e7ee;
+  color: #44476a;
+  border: 0.0625rem solid #d1d9e6;
+  animation: pulse 3s infinite;
+}
+
+::ng-deep.p-fileupload .p-fileupload-content {
+  background-color: #e6e7ee;
+  color: #44476a;
+  border: 0.0625rem solid #d1d9e6;
+  padding: 0.55rem;
+  border-bottom-right-radius: 0.55rem;
+  border-bottom-left-radius: 0.55rem;
+  box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff
+}
+
+::ng-deep.p-progressbar .p-progressbar-value {
+  border: 0 none;
+  margin: 0;
+  background: #44476a;
+}
