--- a/src/app/components/admin-navbar/admin-navbar.component.html
+++ b/src/app/components/admin-navbar/admin-navbar.component.html
@@ -5,6 +5,6 @@
 <!-- Angular components -->
 <div class="container-fluid">
 
-    <router-outlet></router-outlet>
+    <router-outlet  (activate)="onActivate($event)"></router-outlet>
 
 </div>
