--- a/src/app/components/admin-template/admin-template.component.css
+++ b/src/app/components/admin-template/admin-template.component.css
@@ -2,6 +2,16 @@
   visibility: hidden;
 }
 
+::ng-deep .template-active > div > div > a {
+  border-width: 0.22rem !important;
+  animation: pulse 3s infinite;
+}
+
+::ng-deep .template-div-active {
+  animation: pulse 3s infinite;
+  border-width: 0.22rem !important;
+}
+
 .template-container {
   padding: 0.55rem 0.55rem 0.55rem 0.55rem;
   border-radius: 0.55em;
@@ -11,101 +21,99 @@
   margin-left: 1rem;
 }
 
-::ng-deep.mat-form-field {
+.template-name-container > ::ng-deep .mat-form-field {
   width: 96%;
 }
 
-::ng-deep.p-multiselect {
+::ng-deep .p-paginator-rpp-options p-dropdown p-component .p-inputtext {
+  background-color: transparent !important;
+  border: none !important;
+  box-shadow: none !important;
+}
+
+.checkContainer {
+  margin-top: 2.2rem;
+}
+
+::ng-deep .mat-slide-toggle.mat-checked .mat-slide-toggle-thumb {
+  background-color: #44476a;
+}
+
+::ng-deep .mat-slide-toggle .mat-slide-toggle-thumb {
+  background-color: #b1bcce;
+}
+
+::ng-deep .mat-slide-toggle:hover .mat-slide-toggle-bar {
+  background-color: #b1bcce;
+}
+
+::ng-deep .mat-slide-toggle .mat-slide-toggle-bar {
+  border: 0.0625rem solid #d1d9e6;
+  background-color: #e6e7ee;
+}
+
+::ng-deep .mat-slide-toggle.mat-checked:hover .mat-slide-toggle-bar {
+  background-color: #44476a;
+}
+
+::ng-deep .mat-slide-toggle.mat-checked .mat-slide-toggle-bar {
+  border: 0.0625rem solid #d1d9e6;
+  background-color: #e6e7ee;
+}
+
+::ng-deep .mat-slide-toggle-ripple.mat-ripple {
+  display: none;
+}
+
+::ng-deep p-celleditor > p-dropdown > .p-dropdown,
+.form-row > div > ::ng-deep p-dropdown > .p-dropdown {
+  border-bottom: none !important;
+}
+
+.form-row > div > ::ng-deep p-dropdown > .p-dropdown {
   width: 100%;
 }
 
-::ng-deep.p-multiselect {
-  padding: 0.55rem 0.55rem 0.55rem 0.55rem;
-  border-radius: 0.55em;
-  border: 0.0625rem solid #d1d9e6;
-  background-color: #e6e7ee;
-  box-shadow: 2px 2px 5px #b8b9be;
+.slc-field {
+  margin-top: 2rem;
 }
 
-::ng-deep.p-multiselect:not(.p-disabled):hover {
-  color: #44476a;
-  border-color: #d1d9e6;
-  outline: 0;
-  animation: pulse 3s infinite;
+.chipsFilterContainer > ::ng-deep .mat-form-field {
+  width: 97%;
 }
 
-::ng-deep.p-inputtext:enabled:hover {
-  color: #44476a;
-  border-color: #d1d9e6;
-  outline: 0;
-  animation: pulse 3s infinite;
+.chipsContainer > ::ng-deep .mat-form-field {
+  width: 97%;
 }
 
-::ng-deep.p-multiselect-panel .p-multiselect-header {
-  padding: 0.55rem 0.55rem 0.55rem 0.55rem;
-  border: 0.0625rem solid #d1d9e6;
-  background-color: #e6e7ee;
-  margin: 0;
-  border-top-right-radius: 0.55em;
-  border-top-left-radius: 0.55em;
+::ng-deep .mat-chip-list-wrapper {
+  flex-wrap: inherit !important;
+  overflow-x: auto;
+  width: max-content;
+  max-width: 100%;
 }
 
-::ng-deep.p-multiselect-panel
-  .p-multiselect-items
-  .p-multiselect-item:not(.p-highlight):not(.p-disabled):hover {
-  color: #44476a;
-  border: 0.0625rem solid #d1d9e6;
-  background-color: #e6e7ee;
-  box-shadow: 2px 2px 5px #b8b9be;
-}
-
-::ng-deep.p-multiselect-panel .p-multiselect-items .p-multiselect-item {
-  color: #44476a;
-  background: none;
-}
-
-::ng-deep.p-multiselect-panel {
-  border: 0.0625rem solid #d1d9e6;
-  background-color: #e6e7ee;
-  box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff !important;
-}
-
-::ng-deep.p-multiselect-panel
-  .p-multiselect-items
-  .p-multiselect-item.p-highlight {
-  color: #44476a;
-  border: 0.0625rem solid #d1d9e6;
-  background-color: #e6e7ee;
-  box-shadow: 2px 2px 5px #b8b9be;
-}
-
-::ng-deep.p-inputtext {
-  padding: 0.6rem 0.75rem;
-  color: #44476a;
+::ng-deep .mat-chip.mat-standard-chip {
   background-color: #e6e7ee;
   border: 0.0625rem solid #d1d9e6;
-  transition: all 0.3s ease-in-out;
-  border-radius: 0.99rem;
-  box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
-  overflow-wrap: break-word;
-  -webkit-appearance: none;
+  color: #44476a;
+  padding: 1.6rem 1rem 1.6rem 1rem;
+  border-radius: 2rem;
+  pointer-events: none;
 }
 
-::ng-deep.p-inputtext:enabled:focus {
-  outline: 0;
-  box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
-  border: 0.0625rem solid #d1d9e6;
+::ng-deep.mat-chip.mat-standard-chip::after {
+  background: #0000;
 }
 
-::ng-deep.p-multiselect-filter-icon {
-  top: 58% !important;
-}
-
-::ng-deep.p-multiselect-items-wrapper {
-  max-height: 12rem !important;
-}
-
-::ng-deep.p-multiselect .p-multiselect-panel {
-  top: -177.922px !important;
-  border-radius: 0.55em;
+::ng-deep.mat-form-field-appearance-legacy .mat-form-field-underline {
+  background-image: linear-gradient(
+    to right,
+    rgba(0, 0, 0, 0.42) 0%,
+    rgba(0, 0, 0, 0.42) 33%,
+    transparent 0%
+  );
+  background-size: 4px 100%;
+  background-repeat: repeat-x;
+  background-color: transparent;
 }
