--- a/src/app/components/admin-template/admin-template.component.html
+++ b/src/app/components/admin-template/admin-template.component.html
@@ -5,7 +5,11 @@
 
   <ng-container>
     <button class="button-neumorphism margin-lt" (click)="toggleAddNewTemplate()">
-      <i class="bi bi-plus-square-fill "></i> Add new template
+      <i class="bi bi-plus-square-fill"></i> Add new template
+    </button>
+
+    <button class="button-neumorphism margin-lt" (click)="toggleEditField()">
+      <i class="bi bi-pencil-square"></i> Edit field
     </button>
 
     <div [ngClass]="tglAddNewTemplate ? 'show' : 'hide'">
@@ -15,15 +19,21 @@
           <div [ngClass]="!addNewTemplateForm.valid ? 'show' : 'hide'">*All fields must be filled out.</div>
           <hr>
           <div class="form-row">
-            <div class="width-100">
+            <div class="col-lg-7 width-100 template-name-container">
               <mat-form-field appearance="standard">
                 <mat-label>Template name</mat-label>
                 <input matInput class="input-neumorphism" type="text" placeholder="Template name" autocomplete="off"
                   id="templateName" formControlName="templateName" />
               </mat-form-field>
             </div>
-            <div class="width-100">
-              <p-multiSelect [options]="tdFields" optionLabel="name" formControlName="templateFields"
+            <div class="col-lg-5 width-100">
+              <div class="checkContainer">
+                <p-checkbox formControlName="templateStatus" [binary]="true" inputId="binary" label="Visible">
+                </p-checkbox>
+              </div>
+            </div>
+            <div class="col-lg-12 width-100">
+              <p-multiSelect [options]="tdFields" optionLabel="element_placeholder" formControlName="templateFields"
                 placeholder="Template fields"></p-multiSelect>
             </div>
           </div>
@@ -42,15 +52,144 @@
           </div>
         </form>
       </div>
+      <br>
     </div>
+
+    <div [ngClass]="tglEditField ? 'show' : 'hide'">
+      <div spellcheck="true">
+        <form [formGroup]="editFieldForm" (ngSubmit)="saveEditField()" *ngIf="editFieldForm" novalidate>
+          <h5>Edit field </h5>
+          <div [ngClass]="!editFieldForm.valid ? 'show' : 'hide'">*All fields must be filled out.</div>
+          <hr>
+          <div class="form-row">
+            <div class="col-lg-4 width-100 slc-field">
+              <p-dropdown [options]="tdFields" class="input-neumorphism" optionLabel="element_placeholder"
+                optionValue="slIndex" placeholder="Field" formControlName="indexField"></p-dropdown>
+            </div>
+            <div class="col-lg-4 width-100">
+              <mat-form-field appearance="standard">
+                <mat-label>Field new name</mat-label>
+                <input matInput class="input-neumorphism" type="text" placeholder="Field new name" autocomplete="off"
+                  id="fieldName" formControlName="nameField" />
+              </mat-form-field>
+            </div>
+            <div class="col-lg-4 width-100 slc-field">
+              <p-dropdown [options]="selectElmType" class="input-neumorphism" optionLabel="typeName"
+                optionValue="typeCode" placeholder="Field type" formControlName="typeField"></p-dropdown>
+            </div>
+          </div>
+          <hr>
+          <div class="form-row">
+            <div class="col">
+              <button type="submit" class="width-50 show-line-b txt-center" value="save"
+                [disabled]="!editFieldForm.valid"
+                [ngClass]="!editFieldForm.valid ? 'button-neumorphism-disabled' : 'button-neumorphism'">
+                Save
+              </button>
+              <div class="button-neumorphism width-50 show-line-b txt-center" (click)="cancelEditField()">
+                Cancel
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
+      <br>
+    </div>
+
   </ng-container>
 </div>
 <div class="row">
   <div *ngFor="let td of tdData ; let indexTemplate = index" class="template-container"
-    [ngClass]="!tglTemplate ? 'col-lg-4' : 'col-lg-12'" (click)="toggleTemplate()">
+    [ngClass]="[!tglTemplate ? 'col-lg-4' : 'col-lg-12', td.templateStatus ? 'template-div-active' : '' ] "
+    (click)="toggleTemplate()">
 
-    <p-accordion [ngClass]="{ active: td.templateStatus }">
-      <p-accordionTab header="{{ td.templateName }}">
+    <p-accordion>
+      <p-accordionTab header="{{ td.templateName }}" [ngClass]="td.templateStatus ? 'template-active' : ''">
+        <div class="row">
+          <div class="col-lg-12 width-100 margin-lt chipsFilterContainer">
+            <mat-form-field appearance="standard">
+              <mat-label>Search user in list</mat-label>
+              <input matInput class="search-input" #filterUser [matChipInputFor]="chipList"
+                (keyup)="usersFilter(td.templateActiveFor, filterUser.value)" />
+            </mat-form-field>
+          </div>
+        </div>
+        <div class="row" matTooltip="{{ td.templateName }} is active for users in list." matTooltipPosition="above">
+          <div class="col-lg-12 margin-lt width-100 chipsContainer">
+            <mat-form-field>
+              <mat-chip-list #chipList>
+                <ng-container *ngIf="filterUserList">
+                  <mat-chip *ngFor="let tds of filterUserList">{{tds.userName}}
+                  </mat-chip>
+                </ng-container>
+                <ng-container *ngIf="!filterUserList">
+                  <mat-chip *ngFor="let tds of td.templateActiveFor">{{tds.userName}}
+                  </mat-chip>
+                  <mat-chip>Testing</mat-chip>
+                </ng-container>
+              </mat-chip-list>
+            </mat-form-field>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-4 width-100">
+            <div class="row">
+              <div class="col-lg-6">
+                <button class="button-neumorphism margin-lt margin-bt width-100" (click)="toggleAddNewField()"
+                  [ngClass]="!tglAddUsers ? 'show' : ''">
+                  <i class="bi bi-plus-square-fill "></i> Add field
+                </button>
+              </div>
+              <div class="col-lg-6">
+                <button class="button-neumorphism margin-lt margin-bt width-100"
+                  matTooltip="Manage which users have this template activate" matTooltipPosition="above"
+                  (click)="toggleAddUsers()">
+                  <i class="bi bi-plus-square-fill "></i> Add users
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 width-100" [ngClass]="!tglAddNewField ? 'hide' : 'show'">
+            <p-multiSelect [options]="tdFields" optionLabel="element_placeholder" placeholder="Template fields"
+              [(ngModel)]="addField"></p-multiSelect>
+          </div>
+          <div class="col-lg-4 width-100" [ngClass]="!tglAddNewField ? 'hide' : 'show'">
+            <div class="row">
+              <div class="col-lg-6 width-100">
+                <button type="submit" class="width-100 show-line-b txt-center" value="save" [disabled]="!addField"
+                  (click)="saveAddNewField()"
+                  [ngClass]="!addField ? 'button-neumorphism-disabled' : 'button-neumorphism'">
+                  Add
+                </button>
+              </div>
+              <div class="col-lg-6 width-100">
+                <div class="button-neumorphism width-100 show-line-b txt-center" (click)="cancelAddNewField()">
+                  Cancel
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 width-100" [ngClass]="!tglAddUsers ? 'hide' : 'show'">
+            <p-multiSelect [options]="userList" optionLabel="name" placeholder="Users" [(ngModel)]="addUsers">
+            </p-multiSelect>
+          </div>
+          <div class="col-lg-4 width-100" [ngClass]="!tglAddUsers ? 'hide' : 'show'">
+            <div class="row">
+              <div class="col-lg-6 width-100">
+                <button type="submit" class="width-100 show-line-b txt-center" value="save" [disabled]="!addUsers"
+                  (click)="saveAddUsers(indexTemplate)"
+                  [ngClass]="!addUsers ? 'button-neumorphism-disabled' : 'button-neumorphism'">
+                  Add
+                </button>
+              </div>
+              <div class="col-lg-6 width-100">
+                <div class="button-neumorphism width-100 show-line-b txt-center" (click)="cancelAddUsers()">
+                  Cancel
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
 
         <p-table #dataTable [columns]="thData" [value]=td.templateFields [rows]="5" [paginator]="true"
           [rowsPerPageOptions]="[5, 10, 25, 50]" [(selection)]="tbSelectedRows" [rowHover]="true" dataKey="slIndex"
@@ -65,6 +204,13 @@
               <th *ngFor="let col of columns" pSortableColumn="{{col.field}}">
                 {{col.title}}<p-sortIcon field="{{col.field}}"></p-sortIcon>
                 <p-columnFilter type="text" field="{{col.field}}" display="menu"></p-columnFilter>
+              </th>
+              <th>
+                <mat-slide-toggle class="example-margin" [checked]="td.templateStatus" #templateStatus
+                  (change)="toggleTemplateStatus(indexTemplate, td.templateStatus, templateStatus)">
+                  <div *ngIf="!td.templateStatus">Activate</div>
+                  <div *ngIf="td.templateStatus">Deactivate</div>
+                </mat-slide-toggle>
               </th>
             </tr>
           </ng-template>
@@ -81,7 +227,7 @@
                             col.element_type === 'boolean'
                         ? 'checkbox'
                         : col.field === 'type'
-                        ? 'select'
+                        ? 'selectType'
                         : -1
                     ">
                       <ng-container *ngSwitchCase="'checkbox'">
@@ -89,7 +235,7 @@
                         </p-checkbox>
                       </ng-container>
 
-                      <ng-container *ngSwitchCase="'select'">
+                      <ng-container *ngSwitchCase="'selectType'">
                         <p-dropdown [options]="selectElmType" class="input-neumorphism" optionLabel="typeName"
                           optionValue="typeCode" placeholder="Type" [(ngModel)]="rowData[col.field]"></p-dropdown>
                       </ng-container>
