--- a/src/app/components/admin-template/admin-template.component.css
+++ b/src/app/components/admin-template/admin-template.component.css
@@ -25,14 +25,28 @@
   width: 96%;
 }
 
+.i-bigger{
+  font-size: 1.3rem;
+  vertical-align: middle;
+}
+
+.iconbutton-neumorphism {
+  padding-top: 0.3rem !important;
+}
+
 ::ng-deep .p-paginator-rpp-options p-dropdown p-component .p-inputtext {
   background-color: transparent !important;
   border: none !important;
   box-shadow: none !important;
 }
 
-.checkContainer {
+.no-input-container {
   margin-top: 2.2rem;
+}
+
+.remove-btn-container{
+  margin-top: .8rem;
+
 }
 
 ::ng-deep .mat-slide-toggle.mat-checked .mat-slide-toggle-thumb {
@@ -70,50 +84,10 @@
   border-bottom: none !important;
 }
 
-.form-row > div > ::ng-deep p-dropdown > .p-dropdown {
+.form-row > div > ::ng-deep p-dropdown > .p-dropdown{
   width: 100%;
 }
 
-.slc-field {
-  margin-top: 2rem;
-}
-
-.chipsFilterContainer > ::ng-deep .mat-form-field {
-  width: 97%;
-}
-
-.chipsContainer > ::ng-deep .mat-form-field {
-  width: 97%;
-}
-
-::ng-deep .mat-chip-list-wrapper {
-  flex-wrap: inherit !important;
-  overflow-x: auto;
-  width: max-content;
-  max-width: 100%;
-}
-
-::ng-deep .mat-chip.mat-standard-chip {
-  background-color: #e6e7ee;
-  border: 0.0625rem solid #d1d9e6;
-  color: #44476a;
-  padding: 1.6rem 1rem 1.6rem 1rem;
-  border-radius: 2rem;
-  pointer-events: none;
-}
-
-::ng-deep.mat-chip.mat-standard-chip::after {
-  background: #0000;
-}
-
-::ng-deep.mat-form-field-appearance-legacy .mat-form-field-underline {
-  background-image: linear-gradient(
-    to right,
-    rgba(0, 0, 0, 0.42) 0%,
-    rgba(0, 0, 0, 0.42) 33%,
-    transparent 0%
-  );
-  background-size: 4px 100%;
-  background-repeat: repeat-x;
-  background-color: transparent;
+::ng-deep.p-accordion .p-accordion-header:not(.p-disabled).p-highlight .p-accordion-header-link, .p-accordion .p-accordion-header:not(.p-disabled) .p-accordion-header-link:focus {
+  animation: none
 }
