--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -215,24 +215,48 @@
                 <td *ngFor="let col of columns">
                     <p-cellEditor>
                         <ng-template pTemplate="input">
-                            <ng-container *ngIf="col.element_type === 'boolean'; else matIn">
+                            <ng-container [ngSwitch]="
+                            col.element_type === 'boolean'
+                              ? 'checkbox'
+                              : col.field === 'address'
+                              ? 'address'
+                              : -1
+                          ">
+
+                            <ng-container *ngSwitchCase="'checkbox'">
                                 <p-checkbox [(ngModel)]="rowData[col.field]" [binary]="true" inputId="binary">
                                 </p-checkbox>
                             </ng-container>
-                            <ng-template #matIn>
+                          
+
+                            <ng-container *ngSwitchCase="'address'" [formGroup]="addressInputsForm" >
+                                <textarea
+                                pInputTextarea class="input-neumorphism txtFormComponent"
+                                  (click)="toggleModifyAddressForm(rowIndex, 'addressTableField'+rowIndex)"
+                                  [ngClass]="{ 'input-disabled-neumorphism ': !tgleditField }" [readonly]="true"
+                                  placeholder="New {{col.field}}" autocomplete="off"
+                                  value="{{ rowData[col.field] }}" [(ngModel)]="rowData[col.field]"
+                                  formControlName="addressTableField{{rowIndex}}"></textarea>
+                            </ng-container>
+                            <ng-container *ngSwitchDefault>
                                 <mat-form-field appearance="standard">
                                     <mat-label>{{col.title}}</mat-label>
                                     <input matInput type="{{col.element_type}}" placeholder="New {{col.field}}"
                                         [(ngModel)]="rowData[col.field]" required>
                                 </mat-form-field>
-                            </ng-template>
+                            </ng-container>
                             <br>
                             <small *ngIf="onValidationError" class="color-rd">
                                 {{col.title}} must be filled out.
                             </small>
+                        </ng-container>
+
                         </ng-template>
                         <ng-template pTemplate="output">
+                            
                             {{rowData[col.field] | formatBoolean: col.field}}
+
+
                         </ng-template>
                     </p-cellEditor>
                 </td>
@@ -268,3 +292,70 @@
 </div>
 
 <p-confirmDialog rejectLabel="Cancel" acceptLabel="Accept"></p-confirmDialog>
+
+<p-dialog header="Add new address" [(visible)]="tglModifyAddressForm" [breakpoints]="{ '960px': '75vw' }"
+  [style]="{ width: '50vw' }" [draggable]="true" [resizable]="false" class="modifyingAddress">
+  <div class="address-form">
+    <form [formGroup]="addressForm" *ngIf="addressForm" novalidate>
+      <div class="form-row width-100">
+        <div class="col-md-4">
+          <p-dropdown [options]="countries" class="input-neumorphism"
+            (onChange)="getCountryInfo()" optionLabel="name" optionValue="Iso2" placeholder="Country"
+            formControlName="slcCountry"></p-dropdown>
+        </div>
+        <div class="col-md-4">
+          <p-dropdown [options]="states" class="input-neumorphism" optionLabel="name"
+            optionValue="state_code" placeholder="State" formControlName="slcState"></p-dropdown>
+        </div>
+        <div class="col-md-4">
+          <!-- <p-dropdown [options]="cities" class="input-neumorphism" optionLabel="name"
+          optionValue="name" placeholder="City" formControlName="slcCity"></p-dropdown> -->
+          <mat-form-field appearance="standard" class="txtFormComponent">
+            <mat-label>City</mat-label>
+            <input matInput class="input-neumorphism"
+               type="text" placeholder="New City" autocomplete="off" #city
+              formControlName="txtCity" />
+          </mat-form-field>
+        </div>
+      </div>
+      <div class="form-row width-100">
+        <div class="col-md-4">
+          <mat-form-field appearance="standard" class="txtFormComponent">
+            <mat-label>Street</mat-label>
+            <input matInput class="input-neumorphism" 
+              type="text" placeholder="New Street" autocomplete="off" #street
+              formControlName="txtStreet" />
+          </mat-form-field>
+        </div>
+        <div class="col-md-4">
+          <mat-form-field appearance="standard" class="txtFormComponent">
+            <mat-label>Apt/Suite</mat-label>
+            <input matInput class="input-neumorphism" type="text" placeholder="New apt" autocomplete="off" #apt
+              formControlName="txtApt" />
+          </mat-form-field>
+        </div>
+        <div class="col-md-4">
+          <mat-form-field appearance="standard" class="txtFormComponent">
+            <mat-label>Zip/Postal code</mat-label>
+            <input matInput class="input-neumorphism" 
+              type="number" placeholder="New zip code" autocomplete="off" #zip
+              formControlName="txtZip" />
+          </mat-form-field>
+        </div>
+      </div>
+      <div class="form-row width-100">
+        <div class="col-md-6">
+          <button class="button-neumorphism" (click)="tglModifyAddressForm = false">Cancel</button>
+        </div>
+        <div class="col-md-6">
+          <button class="button-neumorphism" [disabled]="!addressForm.valid" [ngClass]="
+      !addressForm.valid
+        ? 'button-neumorphism-disabled'
+        : 'button-neumorphism'"
+            (click)="saveAddressModified(city.value, street.value, apt.value, zip.value)">Save</button>
+        </div>
+      </div>
+    </form>
+</div>
+
+</p-dialog>
