--- a/src/app/css/neumorphism.component.css
+++ b/src/app/css/neumorphism.component.css
@@ -944,3 +944,35 @@ input:checked + .toggle-slider-neumorphism::before {
   left: .99rem;
 
 }
+
+::ng-deep .mat-chip-list-wrapper {
+  flex-wrap: inherit !important;
+  overflow-x: auto;
+  width: max-content;
+  max-width: 100%;
+}
+
+::ng-deep .mat-chip.mat-standard-chip {
+  background-color: #e6e7ee;
+  border: 0.0625rem solid #d1d9e6;
+  color: #44476a;
+  padding: 1.6rem 1rem 1.6rem 1rem;
+  border-radius: 2rem;
+  pointer-events: none;
+}
+
+::ng-deep.mat-chip.mat-standard-chip::after {
+  background: #0000;
+}
+
+::ng-deep.mat-form-field-appearance-legacy .mat-form-field-underline {
+  background-image: linear-gradient(
+    to right,
+    rgba(0, 0, 0, 0.42) 0%,
+    rgba(0, 0, 0, 0.42) 33%,
+    transparent 0%
+  );
+  background-size: 4px 100%;
+  background-repeat: repeat-x;
+  background-color: transparent;
+}
